@@ -1,4 +1,18 @@
 package com.dragontalker.java1;
 
+/**
+ * 测试堆空间常用的JVM参数
+ * -XX:+PrintFlagsInitial:
+ * -XX:+PrintFlagsFinal:
+ * -Xms:
+ * -Xmx:
+ * -XX:NewRatio:
+ * -XX:SurvivorRatio:
+ * -XX:MaxTenuringThreshold:
+ * -XX:+PrintGCDetails:
+ */
 public class HeapArgsTest {
+    public static void main(String[] args) {
+
+    }
 }
